# pancha

./: .clang-format  .gitignore  requirements.txt
experiments/: experiment.py  multi_core.py  single_core.py  single_core_stride_sizes.py
experiments/data/: mawi-202604071400-10M-single-core-fw-lbatch1024.csv  mawi-202604071400-10M-single-core-fw-lbatch256.csv  mawi-202604071400-10M-single-core-fw-lbatch4096.csv  mawi-202604071400-10M-single-core-fw-lbatch64.csv  mawi-202604071400-10M-single-core-fw.csv  mawi-202604071400-10M-single-core-fw_batch_greedy-lbatch1024.csv  mawi-202604071400-10M-single-core-fw_batch_greedy-lbatch256.csv  mawi-202604071400-10M-single-core-fw_batch_greedy-lbatch4096.csv  mawi-202604071400-10M-single-core-fw_batch_greedy-lbatch64.csv  mawi-202604071400-10M-single-core-fw_batch_greedy.csv  mawi-202604071400-10M-single-core-fw_batch_lazy-lbatch1024.csv  mawi-202604071400-10M-single-core-fw_batch_lazy-lbatch256.csv  mawi-202604071400-10M-single-core-fw_batch_lazy-lbatch4096.csv  mawi-202604071400-10M-single-core-fw_batch_lazy-lbatch64.csv  mawi-202604071400-10M-single-core-fw_batch_lazy.csv  mawi-202604071400-10M-single-core-fw_batch_sorted-lbatch1024.csv  mawi-202604071400-10M-single-core-fw_batch_sorted-lbatch256.csv  mawi-202604071400-10M-single-core-fw_batch_sorted-lbatch4096.csv  mawi-202604071400-10M-single-core-fw_batch_sorted-lbatch64.csv  (+188 more)
microbench/: expected_speedup.py  expected_strides.py  plot_multi_core.py  plot_single_core.py  plot_single_core_stride_sizes.py  plot_style.py  preliminary_eval.py
nfs/: CMakeLists.txt  build-track-stride-sizes.sh  build.sh
nfs/executables/: boilerplate.h  cl.c  echo.c  fw.c  fw_batch_greedy.c  fw_batch_lazy.c  fw_batch_lazy_multicore.c  fw_batch_sorted.c  fw_batch_straw.c  fw_batch_sw_orchestrator.c  fw_batch_sw_orchestrator_greedy.c  fw_batch_sw_orchestrator_sorted.c  fw_batch_sw_orchestrator_straw.c  fw_multicore.c  fw_parallel_shared_nothing.c  loop.h  loop_batch_greedy.h  loop_batch_lazy.h  loop_batch_lazy_multicore.h  loop_batch_sorted.h  loop_batch_straw.h  loop_batch_sw_orchestrator.h  loop_batch_sw_orchestrator_greedy.h  loop_batch_sw_orchestrator_sorted.h  loop_batch_sw_orchestrator_sorted2.h  loop_batch_sw_orchestrator_straw.h  loop_multicore.h  loop_parallel_shared_nothing.h  nop.c  nop_batch_greedy.c  nop_batch_lazy.c  nop_batch_lazy_multicore.c  nop_batch_sorted.c  nop_batch_straw.c  nop_loop_parallel_shared_nothing.c  nop_multicore.c  sw_orchestrator_fw.c  sw_orchestrator_mice_workers_fw.c  telemetry.c  telemetry_batch_greedy.c  (+12 more)
nfs/lib/: libvig.h  log.h  util.c  util.h
nfs/lib/state/: bloom-filter-util.c  bloom-filter-util.h  bloom-filter.c  bloom-filter.h  cht.c  cht.h  cms.c  cms.h  double-chain.c  map.c  token-bucket.c  token-bucket.h  vector.c
nfs/lib/util/: compute.h  ether.c  ether.h  packet-io.h  packet.h  tcpudp_hdr.h
tools/: install_deps.sh
(+5 files in other folders)
